space the help block

--- a/public/css/complete.css
+++ b/public/css/complete.css
@@ -124,3 +124,8 @@
   text-align: right;
   font-weight: bold;
 }
+
+.help-block {
+    margin-top: 15px !important;
+    margin-bottom: 5px !important;
+}
