--- a/public/partials/recover.html
+++ b/public/partials/recover.html
@@ -3,7 +3,7 @@
                 <strong>Request password recovery</strong>
             </div>
             <div class="panel-body">
-                <form class="form-horizontal" role="form" ng-submit="recovery()">
+                <form class="form-horizontal" role="form" ng-submit="recover()">
                     <div class="form-group">
                         <label for="email" class="col-md-2 control-label">Email</label>
 
