--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -24,7 +24,11 @@
                             <button type="submit" class="btn btn-primary pull-right">Sign in</button>
                         </div>
                     </div>
+                    
                     <p data-ng-show="error" class="error">{{ error }}</p>
                 </form>
             </div>
+                    <div class="panel-footing">
+                        <a href="#/recover">Forgot password ?</a>
+                    </div>
         </div>
